--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t turndown/api .
-      - run: docker run -e CI=true turndown/api
+      - run: docker build -t emcpheron/aws-test .
+      - run: docker run -e CI=true emcpheron/aws-test
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
@@ -19,9 +19,9 @@ jobs:
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
         with:
-          application_name: docker-gh
-          environment_name: Dockergh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
+          application_name: test
+          environment_name: Test-env
+          existing_bucket_name: elasticbeanstalk-us-east-1-707282035250
           region: us-east-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
