--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t emcpheron/aws-test .
 
       - name: Login to AWS
         run: |
@@ -22,6 +20,7 @@ jobs:
 
       - name: Upload ZIP to S3
         run: |
-          aws s3 cp build.zip s3://turndown-cicd-test-bucket/builds/build.zip
-          echo "S3_BUCKET=turndown-cicd-test-bucket" >> $GITHUB_ENV
-          echo "S3_KEY=builds/build.zip" >> $GITHUB_ENV
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_URL }}
+          docker build -t turndown/api .
+          docker tag turndown/api:latest ${{ secrets.AWS_ECR_URL }}/turndown/api:latest
+          docker push ${{ secrets.AWS_ECR_URL }}/turndown/api:latest
